Fix missing gcov library on ubuntu for debug

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -185,15 +185,15 @@ add_subdirectory(client)
 add_library(srcml_static STATIC $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:libsrcml>)
 set_target_properties(srcml_static PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 target_link_libraries(srcml_static PRIVATE ${LIBSRCML_LIBRARIES})
-if(CMAKE_BUILD_TYPE MATCHES DEBUG AND CMAKE_COMPILER_IS_GNUCXX)
-    target_link_libraries(srcml_static gcov)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
+    target_link_libraries(srcml_static PRIVATE gcov)
 endif()
 
 add_library(srcml_shared SHARED $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:libsrcml>)
 set_target_properties(srcml_shared PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 target_link_libraries(srcml_shared PRIVATE ${LIBSRCML_LIBRARIES})
-if(CMAKE_BUILD_TYPE MATCHES DEBUG AND CMAKE_COMPILER_IS_GNUCXX)
-    target_link_libraries(srcml_shared gcov)
+if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
+    target_link_libraries(srcml_shared PRIVATE gcov)
 endif()
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
