--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,9 +37,9 @@ option(BUILD_LIBSRCML_STATIC "Build a static version of libsrcml" OFF)
 option(BUILD_CLIENT_DOC "Generate client documentation" OFF)
 option(BUILD_LIBSRCML_DOC "Generate libsrcml documentation" OFF)
 
-# The default configuration is to compile in DEBUG mode
+# The default configuration is to compile in Release mode
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
+    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
 endif()
 
 # Dynamic Load libraries (Unix only)
@@ -69,7 +69,6 @@ include_directories(BEFORE src/client src/libsrcml src/parser ${CMAKE_GENERATED_
 add_definitions(-DVERSION=\"1\")
 add_definitions(-DREVISION=\"1\")
 
-# Including extra directories.
 add_subdirectory(src)
 add_subdirectory(test)
 
