--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -25,6 +25,19 @@
 #
 # - All subsequent arguments are linked as libraries.
 #
+
+set(SRCML_LIBRARIES ${LibArchive_LIBRARIES} ${Boost_LIBRARIES} ${CURL_LIBRARIES}
+                CACHE INTERNAL "Libraries needed to build srcml")
+if(NOT WIN32 AND APPLE)
+    list(APPEND SRCML_LIBRARIES pthread)
+elseif(NOT WIN32)
+    list(APPEND SRCML_LIBRARIES crypto pthread)
+elseif(NOT CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    list(APPEND SRCML_LIBRARIES ws2_32 crypto)
+else()
+    list(APPEND SRCML_LIBRARIES ws2_32 ${LIBSRCML_LIBRARIES})
+endif()
+
 file(GLOB CLIENT_SOURCE *.hpp *.cpp)
 
 add_executable(srcml ${CLIENT_SOURCE})
